@@ -9,7 +9,7 @@ Uploaders: Jaldhar H. Vyas <jaldhar@debian.org>,
 Build-Depends: debhelper-compat (= 13),
                default-libmysqlclient-dev,
                krb5-multidev,
-               libapparmor-dev,
+               libapparmor-dev [linux-any],
                libbz2-dev,
                libcap-dev [linux-any],
                libclucene-dev,
